--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Function Challenge</title>
-<link rel="stylesheet" href="styles.css"/>
-<script src="script.js" charset="utf-8"></script>
+  <title>Function Challenge</title>
+  <link rel="stylesheet" href="styles.css">
+  <script src="script.js" charset="utf-8"></script>
 </head>
-<h1>Function Challenge</h1>
+  <h1>Function Challenge</h1>
 </html>
